--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
-    <link rel="stylesheet" href="../../../../CSS/general.css">
-    <link rel="stylesheet" href="../../../../CSS/table.css">
-    <link rel="stylesheet" href="../../../../CSS/code-block.css">
-    <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/general.css">
+    <link rel="stylesheet" href="../../../../../CSS/table.css">
+    <link rel="stylesheet" href="../../../../../CSS/code-block.css">
 </head>
 <body>
-    <iframe src="../../../navigation-bar.html"></iframe>
+    <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
         <h1>TryFloorSlide</h1>
@@ -50,7 +49,7 @@
             </li>
             <br>
             <li>
-                Lastly, should the conditions for floor sliding cease, and the character finds itself beneath a wall, where their collider cannot fit under, the controller
+                Lastly, should the conditions for floor sliding cease, and the character finds themselves beneath a wall, where their collider cannot fit under, the controller
                 will persist in executing the floor slide until the character is no longer positioned beneath the obstructing wall.
             </li>
         </ul>
@@ -61,7 +60,7 @@
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+public class Example : <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>
 {
     protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
