--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/humanoid-controller.html
@@ -48,23 +48,23 @@
             <span class="table-title">Events</span>
             <table>
                 <tr>
-                    <td class="label"><div class="events">OnCharacterJump</div></td>
-                    <td class="description">Triggered when the character performs a jump</td>
+                    <td class="label"><a class="events" href="EVENTS/on-character-jump.html">OnCharacterJump</a></td>
+                    <td class="description">Triggered when the character performs a jump.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="events">OnCharacterDash</div></td>
+                    <td class="label"><a class="events" href="EVENTS/on-character-dash.html">OnCharacterDash</a></td>
                     <td class="description">Triggered when the character performs a dash.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="events">OnLedgeGrabEnter</div></td>
+                    <td class="label"><a class="events" href="EVENTS/on-ledge-grab-enter.html">OnLedgeGrabEnter</a></td>
                     <td class="description">Triggered when the character enters the ledge grab state.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="events">OnLedgeClimbEnter</div></td>
+                    <td class="label"><a class="events" href="EVENTS/on-ledge-climb-enter.html">OnLedgeClimbEnter</a></td>
                     <td class="description">Triggered when the character starts climbing a ledge.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="events">OnLedgeExit</div></td>
+                    <td class="label"><a class="events" href="EVENTS/on-ledge-exit.html">OnLedgeExit</a></td>
                     <td class="description">Triggered when the character exits the ledge grab or ledge climb state.</td>
                 </tr>
             </table>
@@ -92,43 +92,43 @@
             <span class="table-title">Public Properties</span>
             <table>
                 <tr>
-                    <td class="label"><div class="properties">VerticalVelocity</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/vertical-velocity.html">VerticalVelocity</a></td>
                     <td class="description">Current velocity of the character on the Y-axis.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">HorizontalVelocity</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/horizontal-velocity.html">HorizontalVelocity</a></td>
                     <td class="description">Current velocity of the character on the X-axis.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">LedgeDetected</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/ledge-detected.html">LedgeDetected</a></td>
                     <td class="description">Indicates whether a ledge is currently detected.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsGrounded</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-grounded.html">IsGrounded</a></td>
                     <td class="description">Indicates whether the character is grounded.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsRunning</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-running.html">IsRunning</a></td>
                     <td class="description">Indicates whether the character is currently in a running state.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsFloorSliding</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-floor-sliding.html">IsFloorSliding</a></td>
                     <td class="description">Indicates whether the character is currently sliding on the floor.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsWallSliding</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-wall-sliding.html">IsWallSliding</a></td>
                     <td class="description">Indicates whether the character is currently sliding on a wall.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsDashing</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-dashing.html">IsDashing</a></td>
                     <td class="description">Indicates whether the character is currently dashing.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsLedgeGrabbing</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-ledge-grabbing.html">IsLedgeGrabbing</a></td>
                     <td class="description">Indicates whether the character is currently in the ledge grab state.</td>
                 </tr>
                 <tr>
-                    <td class="label"><div class="properties">IsLedgeClimbing</div></td>
+                    <td class="label"><a class="properties" href="PUBLIC-PROPERTIES/is-ledge-climbing.html">IsLedgeClimbing</a></td>
                     <td class="description">Indicates whether the character is currently climbing a ledge.</td>
                 </tr>
             </table>
@@ -138,35 +138,35 @@
             <span class="table-title">Public Methods</span>
             <table>
                 <tr>
-                    <td class="label"><a class="public-methods" href="flip-character.html">FlipCharacter</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/flip-character.html">FlipCharacter</a></td>
                     <td>Reorients the character to face the specified horizontal direction.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="change-horizontal-velocity.html">ChangeHorizontalVelocity</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/change-horizontal-velocity.html">ChangeHorizontalVelocity</a></td>
                     <td>Changes the character's horizontal velocity based on the provided direction.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="try-jumping.html">TryJumping</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-jumping.html">TryJumping</a></td>
                     <td class="description">Attempts to make the character jump based on certain conditions.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="ledge-grab.html">LedgeGrab</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-grab.html">LedgeGrab</a></td>
                     <td class="description">Handles the logic for ledge grabbing, allowing customization of conditions.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="ledge-climb.html">LedgeClimb</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/ledge-climb.html">LedgeClimb</a></td>
                     <td class="description">Handles the logic for ledge climbing, allowing customization of conditions.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="try-dashing.html">TryDashing</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-dashing.html">TryDashing</a></td>
                     <td class="description">Attempts to make the character perform a dash based on certain conditions.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="try-floor-slide.html">TryFloorSlide</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/try-floor-slide.html">TryFloorSlide</a></td>
                     <td class="description">Handles the logic for initiating and exiting floor sliding.</td>
                 </tr>
                 <tr>
-                    <td class="label"><a class="public-methods" href="wall-slide.html">WallSlide</a></td>
+                    <td class="label"><a class="public-methods" href="PUBLIC-METHODS/wall-slide.html">WallSlide</a></td>
                     <td class="description">Handles the logic for wall sliding.</td>
                 </tr>
             </table>
