--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
@@ -9,21 +9,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
-    <link rel="stylesheet" href="../../../../CSS/general.css">
-    <link rel="stylesheet" href="../../../../CSS/table.css">
-    <link rel="stylesheet" href="../../../../CSS/code-block.css">
-    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/general.css">
+    <link rel="stylesheet" href="../../../../../CSS/table.css">
+    <link rel="stylesheet" href="../../../../../CSS/code-block.css">
 </head>
 <body>
-    <iframe src="../../../navigation-bar.html"></iframe>
+    <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <p>
-            <h1>FlipCharacter</h1>
-            <h2>Declaration</h2>
-            <p>protected void <b>FlipCharacter</b>(float <b>directionX</b>);</p>
-        </p>
+        <h1>FlipCharacter</h1>
+        <h2>Declaration</h2>
+        <p>protected void <b>FlipCharacter</b>(float <b>directionX</b>);</p>
         <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
@@ -35,11 +32,11 @@
             </table>
         </div>
         <br>
+        <h2>Description</h2>
         <p>
-            <h2>Description</h2>
             Reorients the character to face the specified horizontal direction.
             <br> <br>
-            This function adjusts the character's Euler angles on the Y-axis based on the provided direction, ensuring that the character faces the specified orientation.
+            This function adjusts the character's euler angles on the Y-axis based on the provided direction, ensuring that the character faces the specified orientation.
         </p>
         <br>
         <p>Here is an example of how you can use this function within your custom controller script:</p>
@@ -47,7 +44,7 @@
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+public class Example : <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>
 {
     protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
