--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
@@ -9,22 +9,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
-    <link rel="stylesheet" href="../../../../CSS/general.css">
-    <link rel="stylesheet" href="../../../../CSS/table.css">
-    <link rel="stylesheet" href="../../../../CSS/code-block.css">
-    <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/scroll-bar.css">
+    <link rel="stylesheet" href="../../../../../CSS/general.css">
+    <link rel="stylesheet" href="../../../../../CSS/table.css">
+    <link rel="stylesheet" href="../../../../../CSS/code-block.css">
 </head>
 <body>
-    <iframe src="../../../navigation-bar.html"></iframe>
+    <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <p>
-            <h1>LedgeClimb</h1>
-            <h2>Declaration</h2>
-            <p>protected void <b>LedgeClimb</b>(bool <b>canLedgeClimb</b> = true);</p> <br>
-        </p>
-
+        <h1>LedgeClimb</h1>
+        <h2>Declaration</h2>
+        <p>protected void <b>LedgeClimb</b>(bool <b>canLedgeClimb</b> = true);</p>
+        <br>
         <div class="table-division">
             <span class="table-title">Parameters</span>
             <table>
@@ -46,8 +43,8 @@
             '<a class="redirect-link" href="#">CharacterLedgeGrab</a>' component.
             <br> <br>
             It's important to note that if your controller is set to utilize '<b>LedgeClimb();</b>' without parameters, enabling automatic ledge climbing, this function will take
-            precedence over '<a class="redirect-link" href="ledge-grab.html">LedgeGrab();</a>'. If you intend to use both functions in your code, ensure that, at least '<b>LedgeClimb();</b>'
-            is configured to be triggered conditionally to prevent any unwanted behaviour.
+            precedence over '<a class="redirect-link" href="ledge-grab.html">LedgeGrab();</a>'. If you intend to use both mechanics, ensure that, at least '<b>LedgeClimb();</b>'
+            is configured to be triggered conditionally in order to prevent any unwanted behaviour.
             <br> <br>
             This example incorporates the ledge climb mechanic, specifying that a certain key must be held for it to be activated:
         </p>
@@ -55,7 +52,7 @@
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+public class Example : <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>
 {
     protected override void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
     {
@@ -68,13 +65,14 @@ public class Example : <a class="redirect-link" href="humanoid-controller.html">
 </pre>
         <br>
         <p>
-            Here is an example on how you could use both ledge grab and ledge climb mechanics within your custom controller script:
+            Illustrated below is a demonstration of integrating both ledge grab and ledge climb mechanics into your custom controller script. Upon detecting a
+            ledge, your character will promptly initiate a grab, and if the 'Space' key is pressed during the grab, it will seamlessly proceed to climb the ledge.
         </p>
 
 <pre class="code-block">
 using UnityEngine;
 
-public class Example : <a class="redirect-link" href="humanoid-controller.html">HumanoidController</a>
+public class Example : <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>
 {
     private bool canLedgeClimb = false;
 
