Additions to HumanoidController documentation
Added documentation for the properties of the humanoid controller.

Remains to add documentation for the protected properties and double check that eveything is documented correctly

--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-grab.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>LedgeGrab</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.LedgeGrab</h1>
         <h2>Declaration</h2>
         <p>protected void <b>LedgeGrab</b>(bool <b>canLedgeGrab</b> = true);</p>
         <br>
