--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-exit.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-exit.html
@@ -19,7 +19,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>OnLedgeExit</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.OnLedgeExit</h1>
         <h2>Declaration</h2>
         <p>public event EventHandler <b>OnLedgeExit</b>;</p>
         <br>
@@ -46,12 +46,12 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         m_HumanoidController.OnLedgeClimbEnter += HumanoidController_OnLedgeExit;
 
         // Exercise caution when subscribing to events. If you plan to initialize 'm_HumanoidController' within the 'Awake' function,
-        // ensure that event subscriptions take place in the 'Start' method.
+        // ensure that the event subscription takes place in the 'Start' method instead.
     }
 
     private void HumanoidController_OnLedgeExit(object sender, System.EventArgs e)
     {
-        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>(m_HumanoidController.gameObject.name + ": is no longer performing ledge grab nor ledge climb");
+        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>(m_HumanoidController.gameObject.name + ": is no longer performing ledge grab nor climbing a ledge");
 
         // Code to execute when the event is triggered.
     }
