--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-grab-enter.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/EVENTS/on-ledge-grab-enter.html
@@ -19,7 +19,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>OnLedgeGrabEnter</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.OnLedgeGrabEnter</h1>
         <h2>Declaration</h2>
         <p>public event EventHandler <b>OnLedgeGrabEnter</b>;</p>
         <br>
@@ -46,7 +46,7 @@ public class Example : <a class="redirect-link" href="https://docs.unity3d.com/S
         m_HumanoidController.OnLedgeGrabEnter += HumanoidController_OnLedgeGrabEnter;
 
         // Exercise caution when subscribing to events. If you plan to initialize 'm_HumanoidController' within the 'Awake' function,
-        // ensure that event subscriptions take place in the 'Start' method.
+        // ensure that the event subscription takes place in the 'Start' method instead.
     }
 
     private void HumanoidController_OnLedgeGrabEnter(object sender, System.EventArgs e)
