--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/change-horizontal-velocity.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>ChangeHorizontalVelocity</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.ChangeHorizontalVelocity</h1>
         <h2>Declaration</h2>
         <p>protected void <b>ChangeHorizontalVelocity</b>(<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Vector2.html">Vector2</a> <b>moveDirection</b>);</p>
             <br>
