--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/flip-character.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>FlipCharacter</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.FlipCharacter</h1>
         <h2>Declaration</h2>
         <p>protected void <b>FlipCharacter</b>(float <b>directionX</b>);</p>
         <br>
