--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/ledge-climb.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>LedgeClimb</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.LedgeClimb</h1>
         <h2>Declaration</h2>
         <p>protected void <b>LedgeClimb</b>(bool <b>canLedgeClimb</b> = true);</p>
         <br>
