--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-dashing.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-dashing.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>TryDashing</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.TryDashing</h1>
         <h2>Declaration</h2>
         <p>protected void <b>TryDashing();</b></p>
         <br>
