--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/try-floor-slide.html
@@ -18,7 +18,7 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>TryFloorSlide</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.TryFloorSlide</h1>
         <h2>Declaration</h2>
         <p>protected void <b>TryFloorSlide</b>(bool <b>inputHold</b>);</p>
         <br>
