--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/wall-slide.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-METHODS/wall-slide.html
@@ -19,7 +19,7 @@
 
     <div class="main-page-division">
         
-        <h1>WallSlide</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.WallSlide</h1>
         <h2>Declaration</h2>
         <p>protected void <b>WallSlide</b>(bool <b>canWallSlide</b> = true);</p> <br>
         <h2>Description</h2>
