--- a/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/horizontal-velocity.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/HUMANOID-CONTROLLER/PUBLIC-PROPERTIES/horizontal-velocity.html
@@ -19,13 +19,52 @@
     <iframe src="../../../../navigation-bar.html"></iframe>
 
     <div class="main-page-division">
-        <h1>HorizontalVelocity</h1>
+        <h1><a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>.HorizontalVelocity</h1>
         <h2>Declaration</h2>
         <p>public float <b>HorizontalVelocity</b> { get; }</p>
         <br>
         <h2>Description</h2>
         <p>
             Current velocity of the character on the X-axis.
+            <br> <br>
+            This value provides information about the character's speed in the horizontal direction. It is specifically obtained from the X-axis velocity of the
+            character's <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Rigidbody.html">Rigidbody2D</a>.
+            <br> <br>
+            If you need to access this property through a class that inherits from <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a>, you can do
+            so directly. Alternatively, if you intend to access it from an external script, you need to reference the corresponding controller instance and access it accordingly.
         </p>
         <br>
-</div>
+        <p>
+            In this example, we access the propery directly:
+        </p>
+<pre class="code-block">
+using UnityEngine;
+
+public class Example : <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a> 
+{
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>(<b>HorizontalVelocity</b>);
+    }
+}
+</pre>
+
+        <br>
+        <p>
+            In this example we access the property through an external script:
+        </p>
+<pre class="code-block">
+using UnityEngine;
+
+public class Example : <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.html">Monobehaviour</a>
+{
+    [<a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/SerializeField.html">SerializeField</a>] private <a class="redirect-link" href="../humanoid-controller.html">HumanoidController</a> m_HumanoidController;
+
+    private void <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/MonoBehaviour.Update.html">Update</a>()
+    {
+        <a class="redirect-link" href="https://docs.unity3d.com/ScriptReference/Debug.Log.html">Debug.Log</a>(m_HumanoidController.<b>HorizontalVelocity</b>);
+    }
+}
+</pre>
+    </div>
+</body>
